# hoverbot

./: .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  RVIZ_TROUBLESHOOTING.md  SECURITY.md  SESSION_SCRATCHPAD.md  TESTING_GUIDE.md  critical_fixes.sh  frames_2026-01-01_01.35.40.gv  hoverbot_cleanup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.scratchpad/: RESTRUCTURING_SESSION.md
config/: hoverbot.rviz  hoverbot_complete.rviz  hoverbot_dev.rviz
config/udev/: 99-hoverbot.rules  README.md
docs/: CLAUDE_CODE_WORKFLOW.md  DEVELOPMENT_CONTEXT.md  FIRMWARE.md  JOURNAL.md  NEW_CHAT_SETUP.md  PLATFORM_SETUP_GUIDE.md  PROJECT_ROADMAP.md  RVIZ2_TROUBLESHOOTING.md  SERIAL_PORT_GUIDE.md
docs/analysis/: ANALYSIS_REPORT.md  CONTRIBUTING.md  REFACTORING_PROPOSALS.md
docs/camera/: CAMERA_QUICK_START.md  ELP_CAMERA_SETUP.md  REALSENSE_D435_INTEGRATION.md
docs/firmware/: BOARD_VARIANT_DEEP_DIVE.md
docs/pi4/: CAMERA_SETUP.md  IMU_INTEGRATION.md  LAUNCH_FIX_SUCCESS.md  NAV2_SETUP.md  PARAMETER_TUNING.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RVIZ_SETUP.md  SLAM_STARTUP.md  SLAM_TESTING_RESULTS.md
docs/sessions/: SESSION_SUMMARY_2024-12-29.md
docs/v3/: INSTALLATION_V3.md  QUICK_REFERENCE.txt  V3_DEVELOPMENT_SESSION.md
firmware/: README.md
firmware/config/: config.h
hardware/: README.md
hardware/docs/: README.md
hardware/photos/: README.md
hardware/schematics/: README.md
hardware/wiring/: README.md
install/: local_setup.sh  setup.sh
install/hoverbot_bringup/share/hoverbot_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hoverbot_bringup/share/hoverbot_bringup/launch/: lidar_power_management.launch.py  nav2_bringup.launch.py
install/hoverbot_driver/share/hoverbot_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hoverbot_driver/share/hoverbot_driver/config/: hoverbot_driver.yaml
log/: latest_build
raspberry-pi/: README.md
raspberry-pi/scripts/: setup_uart.sh  test_serial.py
ros2_ws/src/hoverbot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/hoverbot_bringup/config/: ekf.yaml  elp_camera.yaml  lidar_manager.yaml  slam_toolbox_params.yaml
ros2_ws/src/hoverbot_bringup/hoverbot_bringup/: lidar_manager.py  test_lidar_control.py
ros2_ws/src/hoverbot_bringup/launch/: hoverbot_full.launch.py  hoverbot_full_v2.launch.py  hoverbot_full_v3.launch.py  hoverbot_full_v3.launch.py.backup  imu.launch.py  lidar_power_management.launch.py  robot_with_lidar.launch.py  slam_mapping.launch.py  state_publisher.launch.py
ros2_ws/src/hoverbot_bringup/launch/deprecated/: hoverbot_full_v2.launch.py
ros2_ws/src/hoverbot_bringup/scripts/: test_imu_quality.py
scripts/: hoverbot_shutdown.sh  hoverbot_startup.sh  hoverbot_status.sh
src/bno055_driver/: README.md  package.xml  setup.py
src/hoverbot_bringup/: setup.py
src/hoverbot_description/: CMakeLists.txt  README.md
src/hoverbot_driver/: DELIVERY.md  INSTALL_YOUR_SETUP.md  README.md  (+3 more)
(+36 files in other folders)
