<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hoverbot_driver</name>
  <version>1.0.0</version>
  <description>ROS 2 driver for EFeru hoverboard-based differential drive robot</description>
  
  <maintainer email="ryan@hoverbot.dev">Ryan</maintainer>
  <license>MIT</license>
  
  <author>Ryan</author>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_msgs</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-serial</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
